--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@gsap/react": "^2.1.1",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
