--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gsap/react": "^2.1.1",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.3",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
